lexical custom plugins done

--- a/src/apps/components/Common/LexicalEditor/CustomPlugins/ToolbarPlugin/styles.css
+++ b/src/apps/components/Common/LexicalEditor/CustomPlugins/ToolbarPlugin/styles.css
@@ -6,9 +6,10 @@ button {
   display: flex;
   padding: 10px;
   width: 100%;
-  min-width: max-content;
   background-color: #e4e4e4;
   border-radius: 10px;
+  max-width:inherit;
+  overflow-x: scroll;
 }
 
 .toolbarButton {
